Fix widget scrollbar for macos

--- a/src/collective/cover/static/css/layout_edit_201806251610.css
+++ b/src/collective/cover/static/css/layout_edit_201806251610.css
@@ -735,6 +735,16 @@ body .cssclasswidget
 {
     cursor: pointer;
 }
+/* https://stackoverflow.com/a/10100209 */
+body .cssclasswidget-classlist::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+body .cssclasswidget-classlist::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
 body .cssclasswidget-classlist
 {
     position: absolute;
@@ -751,6 +761,7 @@ body .cssclasswidget-classlist
 
     border: 1px solid #A9A9A9;
     background: #FFF;
+
 }
 body .cssclasswidget-classlist li
 {
